@startuml
abstract class Carnivore {
    + {abstract} BaseAttackPower : double <<get>>
    # {abstract} BaseAttackRange : double <<get>>
    + {abstract} BaseHungerThreshold : double <<get>>
    # {abstract} BaseReproductionThreshold : double <<get>>
    # {abstract} BaseReproductionEnergyCost : double <<get>>
    # AttackPower : double <<get>> <<set>>
    # AttackRange : double <<get>> <<set>>
    # Carnivore(entityLocator:IEntityLocator<Animal>, preyLocator:IEntityLocator<Animal>, worldService:IWorldService, timeManager:ITimeManager, entityFactory:IEntityFactory, position:Position, healthPoints:int, energy:int, isMale:bool, visionRadius:double, contactRadius:double, basalMetabolicRate:double)
    + <<virtual>> CanAttack(prey:Animal) : bool
    + <<virtual>> Attack(prey:Animal) : void
    # <<virtual>> CalculateAttackDamage() : int
    + <<virtual>> Eat(meat:Meat) : void
}
class "IEntityLocator`1"<T> {
}
Animal <|-- Carnivore
Carnivore --> "_preyLocator<Animal>" "IEntityLocator`1"
@enduml
